resources/traffic_management_rules/bookinfo-vs-11.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - match:
        - sourceLabels:
            version: v1
      route:
        - destination:
            host: reviews
            subset: v1
    - match:
        - sourceLabels:
            version: v2
      route:
        - destination:
            host: reviews
            subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - match:
        - sourceLabels:
            version: v1
      route:
        - destination:
            host: ratings
            subset: v1
    - match:
        - sourceLabels:
            version: v2
      route:
        - destination:
            host: ratings
            subset: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
    - details
  http:
    - match:
        - sourceLabels:
            version: v1
      route:
        - destination:
            host: details
            subset: v1
    - match:
        - sourceLabels:
            version: v2
      route:
        - destination:
            host: details
            subset: v2
